simple loadn finance loands loads debts2

--- a/subcategories/finance-loans-debt.html
+++ b/subcategories/finance-loans-debt.html
@@ -57,97 +57,118 @@
         </nav>
     </header>
 
-    <main class="container mx-auto px-4 lg:px-6 py-10 space-y-10">
+    <main class="container mx-auto px-4 lg:px-6 py-10">
+        <div class="flex flex-col lg:flex-row gap-8">
+            <div class="w-full lg:w-2/3 space-y-10">
+                <nav class="text-sm text-gray-600" aria-label="Breadcrumb">
+                    <a href="../index.html" class="hover:text-blue-600">Home</a> &raquo;
+                    <a href="../finance.html" class="hover:text-blue-600">Finance</a> &raquo;
+                    <span class="text-gray-900">Loans &amp; Debt</span>
+                </nav>
 
-        <nav class="text-sm text-gray-600" aria-label="Breadcrumb">
-            <a href="../index.html" class="hover:text-blue-600">Home</a> &raquo;
-            <a href="../finance.html" class="hover:text-blue-600">Finance</a> &raquo;
-            <span class="text-gray-900">Loans &amp; Debt</span>
-        </nav>
+                <section class="bg-white p-6 rounded-lg shadow-md">
+                    <h1 class="text-3xl font-bold text-gray-900 mb-3">Loans &amp; Debt Calculators</h1>
+                    <p class="text-gray-600 leading-relaxed">
+                        Model every stage of borrowing—from shopping rates to accelerating payoff timelines. Use these calculators to explore personal loans, student loans, auto financing, APR comparisons, debt consolidation, and payoff strategies with confidence.
+                    </p>
+                </section>
 
-        <section class="bg-white p-6 rounded-lg shadow-md">
-            <h1 class="text-3xl font-bold text-gray-900 mb-3">Loans &amp; Debt Calculators</h1>
-            <p class="text-gray-600 leading-relaxed">
-                Model every stage of borrowing—from shopping rates to accelerating payoff timelines. Use these calculators to explore personal loans, student loans, auto financing, APR comparisons, debt consolidation, and payoff strategies with confidence.
-            </p>
-        </section>
+                <section>
+                    <h2 class="text-xl font-semibold text-gray-900 mb-4">Featured calculators</h2>
+                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+                        <a href="../simple-loan.html" class="card-hover bg-white p-5 rounded-lg shadow">
+                            <h3 class="text-lg font-semibold text-gray-900">Simple Loan Calculator</h3>
+                            <p class="text-sm text-gray-600 mt-2">Compute simple-interest payments, total cost, and payoff time for quick loan estimates.</p>
+                        </a>
+                        <a href="../personal-loan-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow">
+                            <h3 class="text-lg font-semibold text-gray-900">Personal Loan Calculator</h3>
+                            <p class="text-sm text-gray-600 mt-2">Model payments, origination fees, and extra contributions with full amortization.</p>
+                        </a>
+                        <a href="../loan-amortization.html" class="card-hover bg-white p-5 rounded-lg shadow">
+                            <h3 class="text-lg font-semibold text-gray-900">Loan Amortization Schedule</h3>
+                            <p class="text-sm text-gray-600 mt-2">Generate detailed principal, interest, escrow, and PMI breakdowns per period.</p>
+                        </a>
+                        <a href="../loan-payoff.html" class="card-hover bg-white p-5 rounded-lg shadow">
+                            <h3 class="text-lg font-semibold text-gray-900">Loan Payoff Calculator</h3>
+                            <p class="text-sm text-gray-600 mt-2">See how recurring extras or lump sums cut payoff time and interest paid.</p>
+                        </a>
+                        <a href="../loan-prepayment.html" class="card-hover bg-white p-5 rounded-lg shadow">
+                            <h3 class="text-lg font-semibold text-gray-900">Loan Prepayment Planner</h3>
+                            <p class="text-sm text-gray-600 mt-2">Compare snowball vs. avalanche methods and forecast months saved.</p>
+                        </a>
+                        <a href="../loan-comparison.html" class="card-hover bg-white p-5 rounded-lg shadow">
+                            <h3 class="text-lg font-semibold text-gray-900">Loan Comparison Tool</h3>
+                            <p class="text-sm text-gray-600 mt-2">Evaluate multiple offers side-by-side by APR, fees, and total interest.</p>
+                        </a>
+                        <a href="../interest-only-loan.html" class="card-hover bg-white p-5 rounded-lg shadow">
+                            <h3 class="text-lg font-semibold text-gray-900">Interest-Only Loan Calculator</h3>
+                            <p class="text-sm text-gray-600 mt-2">Understand payment resets and principal due after an interest-only period.</p>
+                        </a>
+                        <a href="../balloon-loan.html" class="card-hover bg-white p-5 rounded-lg shadow">
+                            <h3 class="text-lg font-semibold text-gray-900">Balloon Loan Calculator</h3>
+                            <p class="text-sm text-gray-600 mt-2">Plan for balloon payments, refinancing needs, and interest expense.</p>
+                        </a>
+                        <a href="../apr-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow">
+                            <h3 class="text-lg font-semibold text-gray-900">APR Calculator</h3>
+                            <p class="text-sm text-gray-600 mt-2">Convert nominal rates and fees into true APR for accurate comparisons.</p>
+                        </a>
+                        <a href="../dti-ratio.html" class="card-hover bg-white p-5 rounded-lg shadow">
+                            <h3 class="text-lg font-semibold text-gray-900">Debt-to-Income Ratio</h3>
+                            <p class="text-sm text-gray-600 mt-2">Calculate front-end and back-end DTI for underwriting or budgeting.</p>
+                        </a>
+                        <a href="../credit-card-payoff.html" class="card-hover bg-white p-5 rounded-lg shadow">
+                            <h3 class="text-lg font-semibold text-gray-900">Credit Card Payoff Planner</h3>
+                            <p class="text-sm text-gray-600 mt-2">Design fixed or target-based payoff plans for revolving card balances.</p>
+                        </a>
+                        <a href="../debt-consolidation.html" class="card-hover bg-white p-5 rounded-lg shadow">
+                            <h3 class="text-lg font-semibold text-gray-900">Debt Consolidation Analysis</h3>
+                            <p class="text-sm text-gray-600 mt-2">Compare current debts against a consolidation loan to confirm savings.</p>
+                        </a>
+                        <a href="../auto-loan.html" class="card-hover bg-white p-5 rounded-lg shadow">
+                            <h3 class="text-lg font-semibold text-gray-900">Auto Loan Calculator</h3>
+                            <p class="text-sm text-gray-600 mt-2">Price vehicles with taxes, trade-ins, rebates, and dealer fees.</p>
+                        </a>
+                        <a href="../auto-lease.html" class="card-hover bg-white p-5 rounded-lg shadow">
+                            <h3 class="text-lg font-semibold text-gray-900">Auto Lease Calculator</h3>
+                            <p class="text-sm text-gray-600 mt-2">Break down money factor, residual value, and total lease expense.</p>
+                        </a>
+                        <a href="../student-loan.html" class="card-hover bg-white p-5 rounded-lg shadow">
+                            <h3 class="text-lg font-semibold text-gray-900">Student Loan Calculator</h3>
+                            <p class="text-sm text-gray-600 mt-2">Model federal IDR plans, forgiveness targets, and private refinancing.</p>
+                        </a>
+                        <a href="../student-loan-payoff.html" class="card-hover bg-white p-5 rounded-lg shadow">
+                            <h3 class="text-lg font-semibold text-gray-900">Student Loan Payoff</h3>
+                            <p class="text-sm text-gray-600 mt-2">Accelerate payoff with extra payments and track interest savings.</p>
+                        </a>
+                    </div>
+                </section>
 
-        <section>
-            <h2 class="text-xl font-semibold text-gray-900 mb-4">Featured calculators</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-                <a href="../simple-loan.html" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">Simple Loan Calculator</h3>
-                    <p class="text-sm text-gray-600 mt-2">Compute simple-interest payments, total cost, and payoff time for quick loan estimates.</p>
-                </a>
-                <a href="../personal-loan-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">Personal Loan Calculator</h3>
-                    <p class="text-sm text-gray-600 mt-2">Model payments, origination fees, and extra contributions with full amortization.</p>
-                </a>
-                <a href="../loan-amortization.html" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">Loan Amortization Schedule</h3>
-                    <p class="text-sm text-gray-600 mt-2">Generate detailed principal, interest, escrow, and PMI breakdowns per period.</p>
-                </a>
-                <a href="../loan-payoff.html" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">Loan Payoff Calculator</h3>
-                    <p class="text-sm text-gray-600 mt-2">See how recurring extras or lump sums cut payoff time and interest paid.</p>
-                </a>
-                <a href="../loan-prepayment.html" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">Loan Prepayment Planner</h3>
-                    <p class="text-sm text-gray-600 mt-2">Compare snowball vs. avalanche methods and forecast months saved.</p>
-                </a>
-                <a href="../loan-comparison.html" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">Loan Comparison Tool</h3>
-                    <p class="text-sm text-gray-600 mt-2">Evaluate multiple offers side-by-side by APR, fees, and total interest.</p>
-                </a>
-                <a href="../interest-only-loan.html" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">Interest-Only Loan Calculator</h3>
-                    <p class="text-sm text-gray-600 mt-2">Understand payment resets and principal due after an interest-only period.</p>
-                </a>
-                <a href="../balloon-loan.html" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">Balloon Loan Calculator</h3>
-                    <p class="text-sm text-gray-600 mt-2">Plan for balloon payments, refinancing needs, and interest expense.</p>
-                </a>
-                <a href="../apr-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">APR Calculator</h3>
-                    <p class="text-sm text-gray-600 mt-2">Convert nominal rates and fees into true APR for accurate comparisons.</p>
-                </a>
-                <a href="../dti-ratio.html" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">Debt-to-Income Ratio</h3>
-                    <p class="text-sm text-gray-600 mt-2">Calculate front-end and back-end DTI for underwriting or budgeting.</p>
-                </a>
-                <a href="../credit-card-payoff.html" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">Credit Card Payoff Planner</h3>
-                    <p class="text-sm text-gray-600 mt-2">Design fixed or target-based payoff plans for revolving card balances.</p>
-                </a>
-                <a href="../debt-consolidation.html" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">Debt Consolidation Analysis</h3>
-                    <p class="text-sm text-gray-600 mt-2">Compare current debts against a consolidation loan to confirm savings.</p>
-                </a>
-                <a href="../auto-loan.html" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">Auto Loan Calculator</h3>
-                    <p class="text-sm text-gray-600 mt-2">Price vehicles with taxes, trade-ins, rebates, and dealer fees.</p>
-                </a>
-                <a href="../auto-lease.html" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">Auto Lease Calculator</h3>
-                    <p class="text-sm text-gray-600 mt-2">Break down money factor, residual value, and total lease expense.</p>
-                </a>
-                <a href="../student-loan.html" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">Student Loan Calculator</h3>
-                    <p class="text-sm text-gray-600 mt-2">Model federal IDR plans, forgiveness targets, and private refinancing.</p>
-                </a>
-                <a href="../student-loan-payoff.html" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">Student Loan Payoff</h3>
-                    <p class="text-sm text-gray-600 mt-2">Accelerate payoff with extra payments and track interest savings.</p>
-                </a>
+                <section class="bg-white p-6 rounded-lg shadow-md">
+                    <h2 class="text-xl font-semibold text-gray-900 mb-3">Need more help?</h2>
+                    <p class="text-sm text-gray-600 leading-relaxed">
+                        Explore the <a href="../subcategories/finance-mortgage-real-estate.html" class="text-blue-600 hover:underline">Mortgage &amp; Real Estate</a> tools for housing decisions, or browse our full catalog via the search bar above.
+                    </p>
+                </section>
             </div>
-        </section>
 
-        <section class="bg-white p-6 rounded-lg shadow-md">
-            <h2 class="text-xl font-semibold text-gray-900 mb-3">Need more help?</h2>
-            <p class="text-sm text-gray-600 leading-relaxed">
-                Explore the <a href="../subcategories/finance-mortgage-real-estate.html" class="text-blue-600 hover:underline">Mortgage &amp; Real Estate</a> tools for housing decisions, or browse our full catalog via the search bar above.
-            </p>
-        </section>
+            <aside class="w-full lg:w-1/3">
+                <div class="sticky top-24 space-y-8">
+                    <div class="bg-gray-200 h-96 rounded-lg flex items-center justify-center">
+                        <p class="text-gray-500">Sticky Ad Unit (300×600)</p>
+                    </div>
+
+                    <div class="bg-white p-6 rounded-lg shadow-md">
+                        <h3 class="font-bold text-lg mb-4">Related hubs</h3>
+                        <ul class="space-y-3">
+                            <li><a href="../personal-loans.html" class="text-blue-600 hover:underline">Personal Loans Center</a></li>
+                            <li><a href="../subcategories/finance-mortgage-real-estate.html" class="text-blue-600 hover:underline">Mortgage &amp; Real Estate</a></li>
+                            <li><a href="../finance.html" class="text-blue-600 hover:underline">Finance Overview</a></li>
+                            <li><a href="../credit-cards.html" class="text-blue-600 hover:underline">Credit &amp; Cards</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </aside>
+        </div>
     </main>
 
     <footer class="bg-white border-t mt-12">
@@ -162,5 +183,11 @@
         </div>
     </footer>
 
+    <script>
+        document.getElementById('mobile-menu-toggle')?.addEventListener('click', () => {
+            const menu = document.getElementById('mobile-menu');
+            menu?.classList.toggle('hidden');
+        });
+    </script>
 </body>
 </html>
