simple loadn finance loands loads debts3oo

--- a/auto-lease.html
+++ b/auto-lease.html
@@ -267,7 +267,7 @@
 </header>
 <main class="container" id="main" role="main">
 <nav aria-label="Breadcrumb" class="breadcrumb">
-<a href="/">Home</a> › <a href="https://calcdomain.com/finance.html">Finance</a> › <a href="https://calcdomain.com/personal-loans.html">Personal Loans</a> › Auto Lease Calculator
+<a href="/">Home</a> › <a href="https://calcdomain.com/finance.html">Finance</a> › <a href="https://calcdomain.com/subcategories/finance-personal-loans.html">Personal Loans</a> › Auto Lease Calculator
     </nav>
 <h1>Auto Lease Calculator</h1>
 <p class="intro">
