--- a/loan-amortization-calculator.html
+++ b/loan-amortization-calculator.html
@@ -255,7 +255,7 @@
                 <nav class="text-sm mb-4 text-gray-600">
                     <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
                     <a href="finance.html" class="hover:text-blue-600">Finance</a> &raquo;
-                    <a href="personal-loans.html" class="hover:text-blue-600">Personal Loans</a> &raquo;
+                    <a href="subcategories/finance-personal-loans.html" class="hover:text-blue-600">Personal Loans</a> &raquo;
                     <span>Loan Amortization Calculator</span>
                 </nav>
 
