--- a/student-loan.html
+++ b/student-loan.html
@@ -159,7 +159,7 @@
         "@type": "ListItem",
         "position": 3,
         "name": "Personal Loans",
-        "item": "https://calcdomain.com/personal-loans.html"
+        "item": "https://calcdomain.com/subcategories/finance-personal-loans.html"
       },
       {
         "@type": "ListItem",
@@ -195,7 +195,7 @@
 
 <main class="container" id="main-content" role="main">
 <nav aria-label="Breadcrumb" class="breadcrumbs">
-<a href="/">Home</a> / <a href="https://calcdomain.com/finance.html">Finance</a> / <a href="https://calcdomain.com/personal-loans.html">Personal Loans</a> / <span aria-current="page">Student Loan Calculator</span>
+<a href="/">Home</a> / <a href="https://calcdomain.com/finance.html">Finance</a> / <a href="https://calcdomain.com/subcategories/finance-personal-loans.html">Personal Loans</a> / <span aria-current="page">Student Loan Calculator</span>
 </nav>
 <h1>Student Loan Calculator</h1>
 <p>
