--- a/subcategories/finance-personal-loans.html
+++ b/subcategories/finance-personal-loans.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loans &amp; Debt Calculators | CalcDomain Finance</title>
-    <meta name="description" content="Plan, compare, and pay off loans faster. Explore professional calculators for personal loans, auto loans, student loans, payoff strategies, DTI, APR, and debt consolidation.">
+    <title>Personal Loan Calculators | CalcDomain Finance</title>
+    <meta name="description" content="Plan, compare, and pay off personal loans with professional calculators for payments, amortization, payoff acceleration, APR, consolidation, and affordability checks.">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="../search.js" defer></script>
@@ -63,82 +63,91 @@
                 <nav class="text-sm text-gray-600" aria-label="Breadcrumb">
                     <a href="../index.html" class="hover:text-blue-600">Home</a> &raquo;
                     <a href="../finance.html" class="hover:text-blue-600">Finance</a> &raquo;
-                    <span class="text-gray-900">Loans &amp; Debt</span>
+                    <span class="text-gray-900">Personal Loans</span>
                 </nav>
 
                 <section class="bg-white p-6 rounded-lg shadow-md">
-                    <h1 class="text-3xl font-bold text-gray-900 mb-3">Loans &amp; Debt Calculators</h1>
+                    <h1 class="text-3xl font-bold text-gray-900 mb-3">Personal Loan Calculators</h1>
                     <p class="text-gray-600 leading-relaxed">
-                        Model every stage of borrowing—from shopping rates to accelerating payoff timelines. Use these calculators to explore personal loans, student loans, auto financing, APR comparisons, debt consolidation, and payoff strategies with confidence.
+                        Compare offers, forecast monthly payments, and design payoff strategies with our personal loan toolkit.
+                        Every calculator delivers instant results, mobile-friendly layouts, and transparent methodology.
                     </p>
                 </section>
 
                 <section>
-                    <h2 class="text-xl font-semibold text-gray-900 mb-4">Featured calculators</h2>
+                    <h2 class="text-xl font-semibold text-gray-900 mb-4">Core personal loan tools</h2>
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+                        <a href="../personal-loan.html" class="card-hover bg-white p-5 rounded-lg shadow">
+                            <h3 class="text-lg font-semibold text-gray-900">Personal Loan Calculator</h3>
+                            <p class="text-sm text-gray-600 mt-2">Estimate payment size, total interest, and payoff timeline for installment loans.</p>
+                        </a>
                         <a href="../simple-loan.html" class="card-hover bg-white p-5 rounded-lg shadow">
                             <h3 class="text-lg font-semibold text-gray-900">Simple Loan Calculator</h3>
-                            <p class="text-sm text-gray-600 mt-2">Compute simple-interest payments, total cost, and payoff time for quick loan estimates.</p>
-                        </a>
-                        <a href="../personal-loan-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Personal Loan Calculator</h3>
-                            <p class="text-sm text-gray-600 mt-2">Model payments, origination fees, and extra contributions with full amortization.</p>
+                            <p class="text-sm text-gray-600 mt-2">Compute simple-interest payments and schedules for short-term personal loans.</p>
                         </a>
                         <a href="../loan-amortization.html" class="card-hover bg-white p-5 rounded-lg shadow">
                             <h3 class="text-lg font-semibold text-gray-900">Loan Amortization Schedule</h3>
-                            <p class="text-sm text-gray-600 mt-2">Generate detailed principal, interest, escrow, and PMI breakdowns per period.</p>
+                            <p class="text-sm text-gray-600 mt-2">Generate full payment tables with principal and interest by period.</p>
                         </a>
                         <a href="../loan-payoff.html" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Loan Payoff Calculator</h3>
-                            <p class="text-sm text-gray-600 mt-2">See how recurring extras or lump sums cut payoff time and interest paid.</p>
+                            <h3 class="text-lg font-semibold text-gray-900">Loan Payoff Planner</h3>
+                            <p class="text-sm text-gray-600 mt-2">See interest saved and new payoff dates with one-time or recurring extras.</p>
                         </a>
                         <a href="../loan-prepayment.html" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Loan Prepayment Planner</h3>
-                            <p class="text-sm text-gray-600 mt-2">Compare snowball vs. avalanche methods and forecast months saved.</p>
+                            <h3 class="text-lg font-semibold text-gray-900">Loan Prepayment Calculator</h3>
+                            <p class="text-sm text-gray-600 mt-2">Compare strategies like snowball vs. avalanche and measure months saved.</p>
                         </a>
                         <a href="../loan-comparison.html" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Loan Comparison Tool</h3>
-                            <p class="text-sm text-gray-600 mt-2">Evaluate multiple offers side-by-side by APR, fees, and total interest.</p>
+                            <h3 class="text-lg font-semibold text-gray-900">Loan Comparison</h3>
+                            <p class="text-sm text-gray-600 mt-2">Evaluate multiple offers side-by-side by APR, fees, and cumulative interest.</p>
+                        </a>
+                    </div>
+                </section>
+
+                <section>
+                    <h2 class="text-xl font-semibold text-gray-900 mb-4">Cost &amp; rate analysis</h2>
+                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+                        <a href="../apr.html" class="card-hover bg-white p-5 rounded-lg shadow">
+                            <h3 class="text-lg font-semibold text-gray-900">APR Calculator</h3>
+                            <p class="text-sm text-gray-600 mt-2">Convert nominal interest plus fees into an apples-to-apples APR.</p>
                         </a>
                         <a href="../interest-only-loan.html" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Interest-Only Loan Calculator</h3>
-                            <p class="text-sm text-gray-600 mt-2">Understand payment resets and principal due after an interest-only period.</p>
+                            <h3 class="text-lg font-semibold text-gray-900">Interest-Only Loan</h3>
+                            <p class="text-sm text-gray-600 mt-2">Project payments during the IO period and the balance when amortization begins.</p>
                         </a>
                         <a href="../balloon-loan.html" class="card-hover bg-white p-5 rounded-lg shadow">
                             <h3 class="text-lg font-semibold text-gray-900">Balloon Loan Calculator</h3>
-                            <p class="text-sm text-gray-600 mt-2">Plan for balloon payments, refinancing needs, and interest expense.</p>
-                        </a>
-                        <a href="../apr-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">APR Calculator</h3>
-                            <p class="text-sm text-gray-600 mt-2">Convert nominal rates and fees into true APR for accurate comparisons.</p>
+                            <p class="text-sm text-gray-600 mt-2">Plan for balloon balances, refinancing needs, and total interest expense.</p>
                         </a>
                         <a href="../dti-ratio.html" class="card-hover bg-white p-5 rounded-lg shadow">
                             <h3 class="text-lg font-semibold text-gray-900">Debt-to-Income Ratio</h3>
-                            <p class="text-sm text-gray-600 mt-2">Calculate front-end and back-end DTI for underwriting or budgeting.</p>
-                        </a>
-                        <a href="../credit-card-payoff.html" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Credit Card Payoff Planner</h3>
-                            <p class="text-sm text-gray-600 mt-2">Design fixed or target-based payoff plans for revolving card balances.</p>
+                            <p class="text-sm text-gray-600 mt-2">Check lending eligibility by calculating front-end and back-end DTI.</p>
                         </a>
                         <a href="../debt-consolidation.html" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Debt Consolidation Analysis</h3>
-                            <p class="text-sm text-gray-600 mt-2">Compare current debts against a consolidation loan to confirm savings.</p>
+                            <h3 class="text-lg font-semibold text-gray-900">Debt Consolidation</h3>
+                            <p class="text-sm text-gray-600 mt-2">Compare current debts against a consolidation loan to verify savings.</p>
+                        </a>
+                    </div>
+                </section>
+
+                <section>
+                    <h2 class="text-xl font-semibold text-gray-900 mb-4">Payoff &amp; credit strategies</h2>
+                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+                        <a href="../credit-card-payoff.html" class="card-hover bg-white p-5 rounded-lg shadow">
+                            <h3 class="text-lg font-semibold text-gray-900">Credit Card Payoff</h3>
+                            <p class="text-sm text-gray-600 mt-2">Build fixed payment or target-date payoff plans for revolving balances.</p>
                         </a>
                         <a href="../auto-loan.html" class="card-hover bg-white p-5 rounded-lg shadow">
                             <h3 class="text-lg font-semibold text-gray-900">Auto Loan Calculator</h3>
-                            <p class="text-sm text-gray-600 mt-2">Price vehicles with taxes, trade-ins, rebates, and dealer fees.</p>
+                            <p class="text-sm text-gray-600 mt-2">Price vehicles with taxes, dealer fees, trade-ins, and rebates.</p>
                         </a>
                         <a href="../auto-lease.html" class="card-hover bg-white p-5 rounded-lg shadow">
                             <h3 class="text-lg font-semibold text-gray-900">Auto Lease Calculator</h3>
-                            <p class="text-sm text-gray-600 mt-2">Break down money factor, residual value, and total lease expense.</p>
+                            <p class="text-sm text-gray-600 mt-2">Break down residual value, money factor, and total lease cost.</p>
                         </a>
                         <a href="../student-loan.html" class="card-hover bg-white p-5 rounded-lg shadow">
                             <h3 class="text-lg font-semibold text-gray-900">Student Loan Calculator</h3>
-                            <p class="text-sm text-gray-600 mt-2">Model federal IDR plans, forgiveness targets, and private refinancing.</p>
-                        </a>
-                        <a href="../student-loan-payoff.html" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Student Loan Payoff</h3>
-                            <p class="text-sm text-gray-600 mt-2">Accelerate payoff with extra payments and track interest savings.</p>
+                            <p class="text-sm text-gray-600 mt-2">Model federal IDR plans, forgiveness targets, and refinancing outcomes.</p>
                         </a>
                     </div>
                 </section>
@@ -146,7 +155,8 @@
                 <section class="bg-white p-6 rounded-lg shadow-md">
                     <h2 class="text-xl font-semibold text-gray-900 mb-3">Need more help?</h2>
                     <p class="text-sm text-gray-600 leading-relaxed">
-                        Explore the <a href="../subcategories/finance-mortgage-real-estate.html" class="text-blue-600 hover:underline">Mortgage &amp; Real Estate</a> tools for housing decisions, or browse our full catalog via the search bar above.
+                        Explore the <a href="../subcategories/finance-loans-debt.html" class="text-blue-600 hover:underline">Loans &amp; Debt</a> hub for broader debt management,
+                        or browse the entire catalog using the search bar above.
                     </p>
                 </section>
             </div>
@@ -158,12 +168,22 @@
                     </div>
 
                     <div class="bg-white p-6 rounded-lg shadow-md">
-                        <h3 class="font-bold text-lg mb-4">Related hubs</h3>
+                        <h3 class="font-bold text-lg mb-4">Quick personal loan links</h3>
                         <ul class="space-y-3">
-                            <li><a href="../subcategories/finance-personal-loans.html" class="text-blue-600 hover:underline">Personal Loans Center</a></li>
+                            <li><a href="../personal-loan.html" class="text-blue-600 hover:underline">Personal Loan Calculator</a></li>
+                            <li><a href="../simple-loan.html" class="text-blue-600 hover:underline">Simple Loan Calculator</a></li>
+                            <li><a href="../loan-payoff.html" class="text-blue-600 hover:underline">Loan Payoff Planner</a></li>
+                            <li><a href="../loan-prepayment.html" class="text-blue-600 hover:underline">Prepayment Strategy</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="bg-white p-6 rounded-lg shadow-md">
+                        <h3 class="font-bold text-lg mb-4">Related finance hubs</h3>
+                        <ul class="space-y-3">
+                            <li><a href="../subcategories/finance-loans-debt.html" class="text-blue-600 hover:underline">Loans &amp; Debt</a></li>
                             <li><a href="../subcategories/finance-mortgage-real-estate.html" class="text-blue-600 hover:underline">Mortgage &amp; Real Estate</a></li>
-                            <li><a href="../finance.html" class="text-blue-600 hover:underline">Finance Overview</a></li>
-                            <li><a href="../credit-cards.html" class="text-blue-600 hover:underline">Credit &amp; Cards</a></li>
+                            <li><a href="../subcategories/finance-investment.html" class="text-blue-600 hover:underline">Investing</a></li>
+                            <li><a href="../subcategories/finance-taxes.html" class="text-blue-600 hover:underline">Taxes</a></li>
                         </ul>
                     </div>
                 </div>
