--- a/simple-loan.html
+++ b/simple-loan.html
@@ -55,7 +55,7 @@
     "itemListElement":[
       {"@type":"ListItem","position":1,"name":"Home","item":"https://calcdomain.com/"},
       {"@type":"ListItem","position":2,"name":"Finance","item":"https://calcdomain.com/finance.html"},
-      {"@type":"ListItem","position":3,"name":"Personal Loans","item":"https://calcdomain.com/personal-loans.html"},
+      {"@type":"ListItem","position":3,"name":"Personal Loans","item":"https://calcdomain.com/subcategories/finance-personal-loans.html"},
       {"@type":"ListItem","position":4,"name":"Simple Loan Calculator","item":"https://calcdomain.com/simple-loan.html"}
     ]
   }
@@ -157,7 +157,7 @@
         <nav class="text-sm mb-4 text-gray-600" aria-label="Breadcrumb">
           <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
           <a href="finance.html" class="hover:text-blue-600">Finance</a> &raquo;
-          <a href="personal-loans.html" class="hover:text-blue-600">Personal Loans</a> &raquo;
+          <a href="subcategories/finance-personal-loans.html" class="hover:text-blue-600">Personal Loans</a> &raquo;
           <span class="text-gray-900 font-medium">Simple Loan</span>
         </nav>
 
