--- a/loan-prepayment.html
+++ b/loan-prepayment.html
@@ -817,6 +817,14 @@
       const toggle = $('mobile-menu-toggle');
       const menu = $('mobile-menu');
       toggle?.addEventListener('click', () => menu?.classList.toggle('hidden'));
+
+      if (window.MathJax) {
+        if (window.MathJax.typesetPromise) {
+          window.MathJax.typesetPromise();
+        } else if (window.MathJax.typeset) {
+          window.MathJax.typeset();
+        }
+      }
     });
   </script>
 </body>
