--- a/phonetic-alphabet-translator.html
+++ b/phonetic-alphabet-translator.html
@@ -130,7 +130,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="search.js" defer></script>
-<!-- MathJax for LaTeX formulas -->
+<!-- MathJax for the LaTeX formulas -->
 <script>
   window.MathJax = {
     tex: {
