--- a/auto-lease-calculator.html
+++ b/auto-lease-calculator.html
@@ -441,7 +441,7 @@
                             <li><a href="car-affordability-calculator.html" class="text-blue-600 hover:underline">Car Affordability Calculator</a></li>
                             <li><a href="lease-vs-buy-calculator.html" class="text-blue-600 hover:underline">Lease vs Buy Calculator</a></li>
                             <li><a href="trade-in-value-calculator.html" class="text-blue-600 hover:underline">Trade-in Value Calculator</a></li>
-                            <li><a href="apr-calculator.html" class="text-blue-600 hover:underline">APR Calculator</a></li>
+                            <li><a href="apr.html" class="text-blue-600 hover:underline">APR Calculator</a></li>
                             <li><a href="debt-to-income-ratio-calculator.html" class="text-blue-600 hover:underline">Debt-to-Income Ratio Calculator</a></li>
                         </ul>
                     </div>
