--- a/loan-amortization.html
+++ b/loan-amortization.html
@@ -412,7 +412,7 @@
               <li><a class="text-blue-600 hover:underline" href="simple-loan-calculator.html">Simple Loan Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="loan-payoff.html">Loan Payoff Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="loan-prepayment.html">Loan Prepayment Planner</a></li>
-              <li><a class="text-blue-600 hover:underline" href="apr-calculator.html">APR Calculator</a></li>
+              <li><a class="text-blue-600 hover:underline" href="apr.html">APR Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="debt-consolidation.html">Debt Consolidation Analysis</a></li>
             </ul>
           </div>
