--- a/simple-loan-calculator.html
+++ b/simple-loan-calculator.html
@@ -293,7 +293,7 @@
                             <li><a href="loan-amortization.html" class="text-blue-600 hover:underline">Loan Amortization Schedule</a></li>
                             <li><a href="loan-payoff.html" class="text-blue-600 hover:underline">Loan Payoff Calculator</a></li>
                             <li><a href="loan-prepayment.html" class="text-blue-600 hover:underline">Loan Prepayment Planner</a></li>
-                            <li><a href="apr-calculator.html" class="text-blue-600 hover:underline">APR Calculator</a></li>
+                            <li><a href="apr.html" class="text-blue-600 hover:underline">APR Calculator</a></li>
                         </ul>
                     </div>
                 </div>
