--- a/subcategories/finance-loans-debt.html
+++ b/subcategories/finance-loans-debt.html
@@ -108,7 +108,7 @@
                             <h3 class="text-lg font-semibold text-gray-900">Balloon Loan Calculator</h3>
                             <p class="text-sm text-gray-600 mt-2">Plan for balloon payments, refinancing needs, and interest expense.</p>
                         </a>
-                        <a href="../apr-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow">
+                <a href="../apr.html" class="card-hover bg-white p-5 rounded-lg shadow">
                             <h3 class="text-lg font-semibold text-gray-900">APR Calculator</h3>
                             <p class="text-sm text-gray-600 mt-2">Convert nominal rates and fees into true APR for accurate comparisons.</p>
                         </a>
