--- a/loan-comparison.html
+++ b/loan-comparison.html
@@ -247,7 +247,7 @@
                         <ul class="space-y-3 text-sm">
                             <li><a href="loan-amortization.html" class="text-blue-600 hover:underline">Loan Amortization Schedule</a></li>
                             <li><a href="loan-payoff.html" class="text-blue-600 hover:underline">Loan Payoff Calculator</a></li>
-                            <li><a href="apr-calculator.html" class="text-blue-600 hover:underline">APR Calculator</a></li>
+                            <li><a href="apr.html" class="text-blue-600 hover:underline">APR Calculator</a></li>
                             <li><a href="loan-prepayment.html" class="text-blue-600 hover:underline">Loan Prepayment Calculator</a></li>
                             <li><a href="debt-consolidation.html" class="text-blue-600 hover:underline">Debt Consolidation Analysis</a></li>
                         </ul>
